@@ -88,7 +88,7 @@ fname_create(srun_job_t *job, char *format)
 		return fname;
 	}
 
-	if (strncasecmp(format, "none", (size_t) 4) == 0) {
+	if (strcasecmp(format, "none") == 0) {
 		/*
 		 * Set type to IO_PER_TASK so that /dev/null is opened
 		 *  on every node, which should be more efficient
